# AvaScholar_Git

./: README.md
BasicTCPClient/: BasicTCPClient.sln
BasicTCPClient/BasicTCPClient/: BasicTCPClient.csproj  Form1.Designer.cs  Form1.cs  Program.cs
BasicTCPClient/BasicTCPClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
BasicTCPClient/BasicTCPClient_Exp/: BasicTCPClient_Exp.csproj  Form1.Designer.cs  Form1.cs  Program.cs
BasicTCPClient/BasicTCPClient_Exp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ExpressionServer_v3/: Exp_Data_Pt.cs  ExpressionServer_v3.csproj  File_IO.cs  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Point_Obj.cs  Program.cs  Stat_Comp.cs  Subj_Data.cs
ExpressionServer_v3/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Head_Pose_Kinect_Code/demo/: main.cpp
MultiThreadServer_v5/: File_IO.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Gaze_Comp.cs  Gaze_Data_Pt.cs  MultiThreadServer_v5.csproj  Point_Obj.cs  Program.cs  Screen_Prob_Map.cs  Stat_Comp.cs  Subj_Data.cs
MultiThreadServer_v5/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
OLD/Head_Pose_Kinect_Code/: CMakeLists.txt
OLD/Head_Pose_Kinect_Code/demo/: CMakeLists.txt
OLD/Server_Mult_Version/BasicTCPServer/: BasicTCPServer.csproj  Point_Obj.cs
OLD/Server_Mult_Version/BasicTCPServer_v1/: Form1.cs  (+3 more)
Server_Mult_Version/: Server_Mult_Version.sln
Server_Mult_Version/BasicTCPServer/: BasicTCPServer.sln  Form1.Designer.cs  Form1.cs  Gaze_Comp.cs  Program.cs
Server_Mult_Version/BasicTCPServer_v1/: BasicTCPServer_v1.csproj  File_IO.cs  Form1.Designer.cs  Gaze_Comp.cs
Server_Mult_Version/EXPERIMENTS/: EXPERIMENTS.csproj  Form1.Designer.cs
Server_Mult_Version/MultiThreadServer/: Form1.cs  Gaze_Comp.cs  MultiThreadServer.csproj  Point_Obj.cs  Program.cs  Screen_Prob_Map.cs  Subj.cs
(+18 files in other folders)
